[package]
name = "proxier"
version = "0.1.2"
edition = "2021"
authors = [
    "j-mendez <jeff@spider.cloud>"
]
description = "Auto proxy whitelist and delist crate for 3rd party services."
repository = "https://github.com/spider-rs/proxier"
documentation = "https://docs.rs/proxier"
categories = ["web-programming", "command-line-utilities"]
license = "MIT"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1"
string_concat = "0.0.1"
